--- a/index.html
+++ b/index.html
@@ -11,56 +11,38 @@
 
   <body>
 
-<div class="main">
-      <h1>
-      Wordle solver
-    </h1>
-      
-    <h3>
-      Which letters do you know for sure?<br>(The green ones)
-    </h3>
+    <div class="main">
+      <h1>Wordle solver</h1>
 
-    <div>
-      <input type="text" id="letter1" name="letter1" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
-      <input type="text" id="letter2" name="letter2" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
-      <input type="text" id="letter3" name="letter3" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
-      <input type="text" id="letter4" name="letter4" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
-      <input type="text" id="letter5" name="letter5" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
-    </div>
-      
+      <h3>Which letters do you know for sure?<br>(The green ones)</h3>
 
+      <div>
+        <input type="text" id="letter1" name="letter1" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
+        <input type="text" id="letter2" name="letter2" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
+        <input type="text" id="letter3" name="letter3" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
+        <input type="text" id="letter4" name="letter4" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
+        <input type="text" id="letter5" name="letter5" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)">
+      </div>
 
+      <h3>Write here the yellow letters:<br>(in no particular order)</h3>
 
+      <input type="text" id="yellowLetters" name="yellowLetters" maxlength="5" onkeypress="return /[a-z]/i.test(event.key)">
 
-<h3>Write here the yellow letters:<br>(in no particular order)</h3>
+      <h3>And the gray ones:<br>(or black, if you're a dark theme kind of person)</h3>
 
-<input type="text" id="yellowLetters" name="yellowLetters" maxlength="5" onkeypress="return /[a-z]/i.test(event.key)">
-
-<h3>And the gray ones:<br>(or black, if you're a dark theme kind of person)</h3>
-
-<input type="text" id="grayLetters" name="grayLetters" maxlength="26" onkeypress="return /[a-z]/i.test(event.key)">
-
-<br>
+      <input type="text" id="grayLetters" name="grayLetters" maxlength="26" onkeypress="return /[a-z]/i.test(event.key)"><br>
 
       <button onclick="greatSolver()">Let's go!</button>
 
+      <h3 id="solutionsTitle">One of these could be the word you're looking for:</h3>
 
+      <p id="solutions">(Write at least one letter and click on the "Let's go" button)</p>
+    </div>
 
-    <h3 id="solutionsTitle">
-      One of these could be the word you're looking for:
-    </h3>
-    <p id="solutions">(Write at least one letter and click on the "Let's go" button)</p>
-
-</d>
-
-
-    <p class="footer">
-      Extremely exciting new features are coming soon!<br>(Maybe. Probably! Someday. Definitely someday.)
-    </p>
-
-
-<p class="footer">a tiny project created for fun by <a href="https://twitter.com/wellentheorie">@wellentheorie</a><br>version 0.4</p>
-   
+    <footer>
+      <p>Extremely exciting new features are coming soon!<br>(Maybe. Probably! Someday. Definitely someday.)</p>
+      <p>a tiny project created for fun by <a href="https://github.com/wellenina">wellenina</a></p>
+    </footer>
 
   </body>
 
